<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:text="@string/tvIntento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edIntentado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/intNumero"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNumero" />

    <TextView
        android:id="@+id/tvMenor"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="224dp"
        android:text="@string/tvMenor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMayor"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="224dp"
        android:text="@string/tvMayor"
        app:layout_constraintStart_toEndOf="@+id/tvMenor"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIntento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:onClick="GetOnClick"
        android:layout_marginBottom="300dp"
        android:text="@string/btnIntento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBorrar" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GetOnClick"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="300dp"
        android:text="@string/btnBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>